# BBDown-UI

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: python-package.yml
lib/: action_buttons.py  checker.py  command_builder.py  download_options.py  image_viewer.py  output_area.py  process_handler.py  qr_dialog.py  resource_rc.py  url_handler.py  video_info_banner.py  youtube_command_builder.py  youtube_options.py
lib/bilibili/: command_builder.py  download_options.py
lib/libs/: action_buttons.py  base.py  download_dir.py  image_viewer.py  output_area.py  shortcut.py  url_handler.py  video_info_banner.py
lib/youtube/: youtube_command_builder.py  youtube_options.py
public/: bilibili.icns  resources.qrc
